2008-02-02 Brian Matherly <brian@gramps-project.org>
	* src/plugins/ExportVCard.py:
	* src/plugins/ExportCSV.py:
	* src/plugins/ExportVCalendar.py:
	* src/plugins/WriteFtree.py:
	* src/plugins/WriteGeneWeb.py:
	0001674: when exporting, filter dropdown menu has to 
	"Entire Database" entries

2008-02-02 Brian Matherly <brian@gramps-project.org>
	* po/POTFILES.in:
	0001689: Text: Generato commadline plugin interface not localised

2008-02-02 Brian Matherly <brian@gramps-project.org>
	* po/POTFILES.in:
	0001694: Descendant report -untranslated text

2008-02-02 Brian Matherly <brian@gramps-project.org>
	* src/PluginUtils/_GuiOptions.py:
	* src/plugins/FamilyGroup.py:
	0001702: invoking family group reports crashes gramps

2008-02-02 Brian Matherly <brian@gramps-project.org>
	* src/ReportBase/_Endnotes.py:
	0001704: Det. anc. report - newline needed after endnote entries.

2008-02-02 Peter LAndgren <peter.talken@telia.com>
    * data/man/gramps.in.1: [ \-l] -> [ \-l ]
    * data/man/sv/gramps.in.1: Update, due to update of English gramps.

2008-02-02 Brian Matherly <brian@gramps-project.org>
	* src/plugins/GraphViz.py: Deleted - superceeded by GVRelGraph.py.

2008-02-02 Brian Matherly <brian@gramps-project.org>
	* src/plugins/WebCal.py: 
	0001663: webcal options show Mos. 1-6 Notes and Mos. 7-12 Notes

2008-02-02 Brian Matherly <brian@gramps-project.org>
	* src/plugins/CmdRef.py: 0001688: BUG when I clicked generate commandline 
	plugin reference tool

2008-02-02 Raphael Ackermann <raphael.ackermann@gmail.com>
		   keestux <?@?>
	* data/man/gramps.1.in: patch applied for 
	0000966: Suggestion for man page changes wrt -a and -p options 

2008-02-02 Raphael Ackermann <raphael.ackermann@gmail.com>
	* src/plugins/WriteGeneWeb.py: "Living" is not translated -->fixed

2008-02-01 Brian Matherly <brian@gramps-project.org>
	* src/plugins/GVRelGraph.py: Fix 0001617: place/cause option: cause is 
	never included

2008-01-31 Brian Matherly <brian@gramps-project.org>